--- a/model.ipynb
+++ b/model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel('ДС\\\\result_2021_analized.xlsx') # В датасете созданно новоле поле Research, полученное из рейтинга THE"
+    "df = pd.read_excel('modified_datasets\\\\result_2021_analized.xlsx') # В датасете созданно новоле поле Research, полученное из рейтинга THE"
    ]
   },
   {
